[package]
name = "multi_containers"
version = "0.1.2"
edition = "2021"
documentation = "https://docs.rs/multi_containers"
repository = "https://github.com/dtwitty/multi_containers"
license = "MIT"
description = "A library for containers with duplicate entries"
keywords = ["multiset", "multimap"]
categories = ["data-structures"]
readme = "README.md"

