[package]
name = "multi_containers"
version = "0.2.1"
edition = "2021"
documentation = "https://docs.rs/multi_containers"
repository = "https://github.com/dtwitty/multi_containers"
license = "MIT"
description = "Ergonomically work with multiple values per key"
keywords = ["multiset", "multimap"]
categories = ["data-structures"]
readme = "README.md"

